# flake8-absolute-import

./: .coveragerc  .gitignore  .travis.yml  .travis_disabled.yml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  azure-coretest.yml  azure-job.yml  azure-pipelines.yml  azure-sdisttest.yml  conftest.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  default-branch-migration.yml
src/flake8_absolute_import/: __init__.py  core.py  flake8_absolute_import.py  version.py
tests/: test_plugin.py
