[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '''
(
    ^/tests/.*[.]py$
  | ^/src/flake8_absolute_import/.*[.]py$
  | ^/setup[.]py
  | ^/conftest[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^/[.]
  | ^/doc
  | ^/env
)
'''
