[build-system]
requires = [
    "wheel",
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-absolute-import"
description = "flake8 plugin to require absolute imports"
authors = [
    { name = "Brian Skinn", email = "brian.skinn@gmail.com" },
]
classifiers = [
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Development Status :: 5 - Production/Stable",
]
keywords = [
    "flake8-plugin",
    "linting",
    "absolute-imports",
    "relative-imports",
]
requires-python = ">=3.6"
dependencies = [
    "flake8>=5.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
Homepage = "https://github.com/bskinn/flake8-absolute-import"
Changelog = "https://github.com/bskinn/flake8-absolute-import/blob/main/CHANGELOG.md"
Thank = "https://twitter.com/btskinn"
Donate = "https://github.com/sponsors/bskinn"

[project.license]
text = "MIT License"

[project.entry-points."flake8.extension"]
ABS1 = "flake8_absolute_import:Plugin"

[tool.setuptools]
platforms = [
    "any",
]
license-files = [
    "LICENSE.txt",
]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.black]
line-length = 88
include = '''
(
    ^tests/.*[.]py$
  | ^src/flake8_absolute_import/.*[.]py$
  | ^setup[.]py
  | ^conftest[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^[.]
  | ^doc
  | ^env
)
'''
