[metadata]
name = flake8-absolute-import
description = flake8 plugin to require absolute imports
url = https://github.com/bskinn/flake8-absolute-import
project_urls =
    Changelog=https://github.com/bskinn/flake8-absolute-import/blob/main/CHANGELOG.md
    Thank=https://twitter.com/btskinn
    Donate=https://github.com/sponsors/bskinn
license = MIT License
license_file = LICENSE.txt
platforms = any
author = Brian Skinn
author_email = bskinn@alum.mit.edu
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: Flake8
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Quality Assurance
    Development Status :: 5 - Production/Stable
keywords = flake8-plugin, linting, absolute-imports, relative-imports

[options]
install_requires =
    flake8>=3.7

python_requires = >=3.4
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
flake8.extension =
    ABS1=flake8_absolute_import:Plugin
